--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
 .intro {
-background: url("https://drive.google.com/uc?export=view&id=1UwjOww5ATCD6JRt-3Ns8PzKbBxOcYhHC") center no-repeat;
+  width: 100%;
+	height: 100vh;
+  background: url("https://drive.google.com/uc?export=view&id=1UwjOww5ATCD6JRt-3Ns8PzKbBxOcYhHC") center no-repeat;
 }
