--- a/style.css
+++ b/style.css
@@ -3,7 +3,18 @@ margin: 0;
 }
 
 .intro {
-  width: 100%;
-	height: 100vh;
-  background: url("https://drive.google.com/uc?export=view&id=1UwjOww5ATCD6JRt-3Ns8PzKbBxOcYhHC") center no-repeat;
+display: flex;
+
+margin: 0;
+width: 100%;
+height: 100vh;
+background: url("https://drive.google.com/uc?export=view&id=1UwjOww5ATCD6JRt-3Ns8PzKbBxOcYhHC") center no-
+
+repeat;
+background-size: cover;
+}
+
+
+.container {
+margin: 0;
 }
