--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ border: 3px dotted red;   /* видалити */
 }
 
 .header_time {
-	border: 3px dotted blue;   /* видалити */
+	border: 3px solid blue;   /* видалити */
 }
 
 .nav_link {
