--- a/style.css
+++ b/style.css
@@ -76,3 +76,47 @@ background-size: cover;
 
 
 
+
+.blocks{
+	width: 50%;
+	max-width: 400px;
+	display: flex;
+	margin: 0 auto;
+	
+}
+.blocks__col{
+	/* border: 1px solid #003; */
+	flex: 1 1 0;
+	margin: 0 auto;
+}
+
+.block__item:hover {
+	opacity: 1;
+	transition: opacity 0s linear;
+}
+
+.block__item{
+	border-radius: 5px;
+	/* border: 1px solid #0f0; */
+	display: block;
+	margin: 0 auto;
+	
+/* 	max-width: 100%; 
+	height: auto; */
+	
+	height: 10px;
+	width: 10px;
+	background: linear-gradient(to bottom, blue 30%, yellow 70%);
+	background: black;
+	opacity: 0.1;
+	transition: opacity 2s linear;
+}
+
+.content {
+
+}
+
+
+
+
+
